# Cargo workspace for the HOSTED build only (the bare-metal build stays on
# Bazel — rules_rust ignores these Cargo.toml files). It exists so the kernel
# can be compiled as a std binary linking the `arch-interp` (software) backend:
#
#   cargo run -p kernel            # builds the retroos-host binary
#
# Built for the native (64-bit) host. The kernel is deliberately NOT bound to a
# 32-bit pointer width — guest addresses are explicit fixed-width types, so it
# compiles host-width-agnostic and the software CPU runs as a real 64-bit
# process (where Unicorn's C core also builds natively).
[workspace]
resolver = "2"
members = ["arch-abi", "arch-interp", "kernel", "lib"]
# `arch-metal` is the bare-metal i686 backend — it only compiles for the metal
# target via Bazel (//arch-metal), never on the host triple. Excluded so a
# host-side `cargo build` never tries to compile it. (The hosted kernel selects
# `arch-interp`; the metal cfg that names `arch_metal` is off under cargo.)
exclude = ["arch-metal"]

# The kernel and its freestanding lib are written for the bare-metal deployment
# semantics (Bazel builds them at opt-level=s, where integer-overflow checks are
# off and wrapping is relied upon — e.g. shift-by-width masking). Match that for
# the hosted debug build so benign metal wraps don't panic. The interpreter
# backend (arch-interp) keeps overflow checks on.
[profile.dev.package.kernel]
overflow-checks = false
[profile.dev.package.lib]
overflow-checks = false

# Patched Unicorn C bindings: surface exception_is_int (bit 8) + error_code
# (bits 16..31) through the intr-hook argument and reset old_exception, so
# arch-interp can return clean SoftInt/Exception events with the faulting
# selector (DPMI overlay demand-loading) and avoid spurious double faults.
# Fork = published 2.1.5 + a 3-hunk cpu-exec.c patch (see the repo's
# RETROOS_PATCH.md). Pinned by rev for reproducibility.
[patch.crates-io]
unicorn-engine-sys = { git = "https://github.com/gerben-stavenga/unicorn-retroos-patch", rev = "269253342e0cf2d415db12b3579abb865b43b13b" }
