module(name = "retro_os", version = "0.1.0")

bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_nasm", version = "0.4.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "platforms", version = "0.0.10")

# Configure rust toolchain - only register for host (exec), our custom ones handle target
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["nightly/2026-05-19"],
    extra_target_triples = ["i686-unknown-linux-musl", "x86_64-unknown-linux-musl"],
)
use_repo(
    rust,
    "rust_toolchains",
    "rust_linux_x86_64__i686-unknown-linux-musl__nightly_tools",
    "rust_linux_x86_64__x86_64-unknown-linux-musl__nightly_tools",
)
# Our musl wrappers must be registered BEFORE @rust_toolchains so they
# win over the default x86_64-unknown-linux-gnu toolchain.
register_toolchains(
    "//toolchain:musl_rust_toolchain_i686",
    "//toolchain:musl_rust_toolchain_x86_64",
)
register_toolchains("@rust_toolchains//:all")

# Download rustc toolchain
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rust_toolchain_x86_64_linux",
    url = "https://static.rust-lang.org/dist/2026-05-19/rust-nightly-x86_64-unknown-linux-gnu.tar.xz",
    strip_prefix = "rust-nightly-x86_64-unknown-linux-gnu",
    build_file = "//toolchain:rust_toolchain.BUILD",
)

http_archive(
    name = "rust_src",
    url = "https://static.rust-lang.org/dist/2026-05-19/rust-src-nightly.tar.xz",
    strip_prefix = "rust-src-nightly/rust-src/lib/rustlib/src/rust",
    build_file = "//stdlib:rust_src.BUILD",
)

http_archive(
    name = "compiler_builtins",
    url = "https://crates.io/api/v1/crates/compiler_builtins/0.1.160/download",
    type = "tar.gz",
    strip_prefix = "compiler_builtins-0.1.160",
    build_file = "//stdlib:compiler_builtins.BUILD",
)

http_archive(
    name = "rustc_demangle",
    url = "https://crates.io/api/v1/crates/rustc-demangle/0.1.24/download",
    type = "tar.gz",
    strip_prefix = "rustc-demangle-0.1.24",
    build_file = "//stdlib:rustc_demangle.BUILD",
)

http_archive(
    name = "bitflags",
    url = "https://static.crates.io/crates/bitflags/bitflags-2.9.0.crate",
    type = "tar.gz",
    strip_prefix = "bitflags-2.9.0",
    build_file = "//stdlib:bitflags.BUILD",
)

http_archive(
    name = "crc_catalog",
    url = "https://static.crates.io/crates/crc-catalog/crc-catalog-2.4.0.crate",
    type = "tar.gz",
    strip_prefix = "crc-catalog-2.4.0",
    build_file = "//stdlib:crc_catalog.BUILD",
)

http_archive(
    name = "crc",
    url = "https://static.crates.io/crates/crc/crc-3.2.1.crate",
    type = "tar.gz",
    strip_prefix = "crc-3.2.1",
    build_file = "//stdlib:crc.BUILD",
)

http_archive(
    name = "ext4_view",
    url = "https://static.crates.io/crates/ext4-view/ext4-view-0.9.3.crate",
    type = "tar.gz",
    strip_prefix = "ext4-view-0.9.3",
    build_file = "//stdlib:ext4_view.BUILD",
)

http_archive(
    name = "spin",
    url = "https://static.crates.io/crates/spin/spin-0.9.8.crate",
    type = "tar.gz",
    strip_prefix = "spin-0.9.8",
    build_file = "//stdlib:spin.BUILD",
)

# Register toolchains
register_toolchains(
    "@rules_nasm//nasm/toolchain",
    "//toolchain:retro_rust_toolchain",
    "//toolchain:retro_rust_toolchain_64",
    "//toolchain:bare_cc_toolchain_def",
    "//toolchain:bare_cc_toolchain_64_def",
    "//toolchain:bare_cc_toolchain_musl_def",
    "//toolchain:bare_cc_toolchain_musl64_def",
)

# ---- the Unicorn C core, as a Bazel cmake target ---------------------------
# Source = the patched fork (same rev Cargo.lock pins for the Rust crate).
# Built by //third_party/unicorn with the configured host CC toolchain;
# rules_foreign_cc supplies a downloaded cmake, so nothing here depends on
# host tool paths.
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

http_archive(
    name = "unicorn_fork",
    url = "https://github.com/gerben-stavenga/unicorn-retroos-patch/archive/269253342e0cf2d415db12b3579abb865b43b13b.tar.gz",
    sha256 = "8c12a55228e395c9d5163161d8192c89913a7e839eafa7b6020fdf0a4502a524",
    strip_prefix = "unicorn-retroos-patch-269253342e0cf2d415db12b3579abb865b43b13b",
    # Restores the QEMU store fast path the upstream fork disabled; should
    # eventually land as a commit in the fork repo and the rev bumped.
    patches = ["//toolchain:unicorn-store-fastpath.patch"],
    patch_args = ["-p1"],
    build_file_content = """filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)""",
)

# ---- crate_universe: the hosted (cargo-workspace) dependency graph --------
# Generates Bazel targets for every crates.io/git dependency in Cargo.lock,
# so retroos-host builds as an ordinary rust_binary instead of
# cargo-in-a-genrule. unicorn-engine-sys is fully de-build-scripted: the C
# core comes from //third_party/unicorn and the bindgen output is vendored
# (see the patch) — no libclang, no host-path pins, and the whole bindgen
# build-dependency tree is never built.
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//arch-abi:Cargo.toml",
        "//arch-interp:Cargo.toml",
        "//kernel:Cargo.toml",
        "//lib:Cargo.toml",
        "//play:Cargo.toml",
    ],
)
crate.annotation(
    crate = "unicorn-engine-sys",
    gen_build_script = "off",
    deps = ["@@//third_party/unicorn"],
    patch_args = ["-p1"],
    patches = ["//toolchain:unicorn-sys-pregen-bindings.patch"],
)
use_repo(crate, "crates")
