module(name = "retro_os", version = "0.1.0")

bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_nasm", version = "0.4.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "platforms", version = "0.0.10")

# Configure rust toolchain - only register for host (exec), our custom ones handle target
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["nightly/2026-05-19"],
    extra_target_triples = ["i686-unknown-linux-musl", "x86_64-unknown-linux-musl"],
)
use_repo(
    rust,
    "rust_toolchains",
    "rust_linux_x86_64__i686-unknown-linux-musl__nightly_tools",
    "rust_linux_x86_64__x86_64-unknown-linux-musl__nightly_tools",
)
# Our musl wrappers must be registered BEFORE @rust_toolchains so they
# win over the default x86_64-unknown-linux-gnu toolchain.
register_toolchains(
    "//toolchain:musl_rust_toolchain_i686",
    "//toolchain:musl_rust_toolchain_x86_64",
)
register_toolchains("@rust_toolchains//:all")

# Download rustc toolchain
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rust_toolchain_x86_64_linux",
    url = "https://static.rust-lang.org/dist/2026-05-19/rust-nightly-x86_64-unknown-linux-gnu.tar.xz",
    strip_prefix = "rust-nightly-x86_64-unknown-linux-gnu",
    build_file = "//toolchain:rust_toolchain.BUILD",
)

http_archive(
    name = "rust_src",
    url = "https://static.rust-lang.org/dist/2026-05-19/rust-src-nightly.tar.xz",
    strip_prefix = "rust-src-nightly/rust-src/lib/rustlib/src/rust",
    build_file = "//stdlib:rust_src.BUILD",
)

http_archive(
    name = "compiler_builtins",
    url = "https://crates.io/api/v1/crates/compiler_builtins/0.1.160/download",
    type = "tar.gz",
    strip_prefix = "compiler_builtins-0.1.160",
    build_file = "//stdlib:compiler_builtins.BUILD",
)

http_archive(
    name = "rustc_demangle",
    url = "https://crates.io/api/v1/crates/rustc-demangle/0.1.24/download",
    type = "tar.gz",
    strip_prefix = "rustc-demangle-0.1.24",
    build_file = "//stdlib:rustc_demangle.BUILD",
)

http_archive(
    name = "bitflags",
    url = "https://static.crates.io/crates/bitflags/bitflags-2.9.0.crate",
    type = "tar.gz",
    strip_prefix = "bitflags-2.9.0",
    build_file = "//stdlib:bitflags.BUILD",
)

http_archive(
    name = "crc_catalog",
    url = "https://static.crates.io/crates/crc-catalog/crc-catalog-2.4.0.crate",
    type = "tar.gz",
    strip_prefix = "crc-catalog-2.4.0",
    build_file = "//stdlib:crc_catalog.BUILD",
)

http_archive(
    name = "crc",
    url = "https://static.crates.io/crates/crc/crc-3.2.1.crate",
    type = "tar.gz",
    strip_prefix = "crc-3.2.1",
    build_file = "//stdlib:crc.BUILD",
)

http_archive(
    name = "ext4_view",
    url = "https://static.crates.io/crates/ext4-view/ext4-view-0.9.3.crate",
    type = "tar.gz",
    strip_prefix = "ext4-view-0.9.3",
    build_file = "//stdlib:ext4_view.BUILD",
)

http_archive(
    name = "spin",
    url = "https://static.crates.io/crates/spin/spin-0.9.8.crate",
    type = "tar.gz",
    strip_prefix = "spin-0.9.8",
    build_file = "//stdlib:spin.BUILD",
)

# Register toolchains
register_toolchains(
    "@rules_nasm//nasm/toolchain",
    "//toolchain:retro_rust_toolchain",
    "//toolchain:retro_rust_toolchain_64",
    "//toolchain:bare_cc_toolchain_def",
    "//toolchain:bare_cc_toolchain_64_def",
    "//toolchain:bare_cc_toolchain_musl_def",
    "//toolchain:bare_cc_toolchain_musl64_def",
)

# ---- the Unicorn C core, as a Bazel cmake target ---------------------------
# Source = the patched fork (matching the unicorn-engine crate pinned below).
# Built by //third_party/unicorn with the configured host CC toolchain;
# rules_foreign_cc supplies a downloaded cmake, so nothing here depends on
# host tool paths.
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

http_archive(
    name = "unicorn_fork",
    url = "https://github.com/gerben-stavenga/unicorn-retroos-patch/archive/269253342e0cf2d415db12b3579abb865b43b13b.tar.gz",
    sha256 = "8c12a55228e395c9d5163161d8192c89913a7e839eafa7b6020fdf0a4502a524",
    strip_prefix = "unicorn-retroos-patch-269253342e0cf2d415db12b3579abb865b43b13b",
    patches = ["//toolchain:unicorn-no-double-fault.patch"],
    patch_args = ["-p1"],
    build_file_content = """filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)""",
)

# ---- crate_universe: third-party Rust dependencies (Bazel-only) -----------
# Third-party crates, declared directly (no cargo, no Cargo.toml manifests):
# `crate.spec` + `crate.from_specs` resolve against crates.io and pin in
# cargo-bazel-lock.json (repin: CARGO_BAZEL_REPIN=1 bazelisk build ...).
# Versions/features here are the single source of truth; each rust_library/
# rust_binary picks its deps and crate_features explicitly per target — no
# additive-feature unification, which is exactly why the engine split
# (tcg vs kvm) stays clean. unicorn-engine-sys is fully de-build-scripted:
# the C core comes from //third_party/unicorn and the bindgen output is
# vendored (see the patch) — no libclang, no host-path pins, and the whole
# bindgen build-dependency tree is never built.
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

# Hosted backend (arch-interp).
crate.spec(package = "libc", version = "0.2")
crate.spec(package = "unicorn-engine", version = "=2.1.5")  # tcg engine
crate.spec(package = "kvm-ioctls", version = "0.24")  # kvm engine
crate.spec(
    package = "kvm-bindings",
    version = "0.14",
    features = ["fam-wrappers"],
)

# Kernel (hosted).
crate.spec(package = "ext4-view", version = "0.9.3")
crate.spec(package = "rustc-demangle", version = "0.1.24")
crate.spec(
    package = "spin",
    version = "0.9",
    default_features = False,
    features = [
        "mutex",
        "spin_mutex",
    ],
)

# retroos-play (SDL window). `bundled`+`static-link` compile a static SDL2
# in the sys crate's build script — no system libSDL2 at build or run time.
crate.spec(
    package = "sdl2",
    version = "0.37",
    default_features = False,
    features = [
        "bundled",
        "static-link",
    ],
)

crate.from_specs(
    name = "crates",
    # Both pins are Bazel-owned: Cargo.Bazel.lock is the resolver's version
    # pinning (Cargo.lock format, no cargo involved), cargo-bazel-lock.json
    # the rendered-repository pinning.
    cargo_lockfile = "//:Cargo.Bazel.lock",
    lockfile = "//:cargo-bazel-lock.json",
)
crate.annotation(
    crate = "unicorn-engine-sys",
    gen_build_script = "off",
    deps = ["@@//third_party/unicorn"],
    patch_args = ["-p1"],
    patches = ["//toolchain:unicorn-sys-pregen-bindings.patch"],
)
use_repo(crate, "crates")
