load("@rules_rust//rust:defs.bzl", "rust_library")

# The hosted interpreter backend (host-config build only; the metal kernel
# links //arch-metal instead). Unicorn — the patched fork pinned in
# Cargo.lock — and libc come from the crate_universe repo @crates.
rust_library(
    name = "arch-interp",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "retroos_arch_interp",
    edition = "2021",
    # abort matches //lib and //arch-abi (see //kernel:kernel_hosted).
    rustc_flags = [
        "-Cpanic=abort",
        # //lib + //arch-abi are -Crelocation-model=static (non-PIC, their
        # metal setting); a PIE link rejects them — build non-PIE to match.
        "-Crelocation-model=static",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//arch-abi",
        "//lib",
        "@crates//:libc",
        "@crates//:unicorn-engine",
    ],
)
