[package]
name = "retroos-arch-interp"
version = "0.1.0"
edition = "2021"

[lib]
name = "retroos_arch_interp"
path = "src/lib.rs"

[dependencies]
arch-abi = { path = "../arch-abi" }
# The reusable software-VGA renderer (no_std, backend-agnostic). The interpreter
# emulates the VGA below the arch boundary and renders the guest screen through
# it — the same renderer a future in-RetroOS windowed-DOS compositor will use.
lib = { path = "../lib" }
# Unicorn (the software x86 core) drives the Vcpu run path. The hosted build
# targets a native 64-bit host, so its C core builds natively.
unicorn-engine = "2.1.5"
# Software MMU: each guest address space is an mmap-reserved, demand-committed
# host VA region, so a guest-linear address is a contiguous host pointer (the
# same model the metal backend gets from real page tables).
libc = "0.2"
# The self-contained Unicorn proof-of-concept that seeded this backend:
#   cargo run -p retroos-arch-interp --example poc
[[example]]
name = "poc"
path = "examples/poc.rs"
