[package]
name = "retroos-arch-interp"
version = "0.1.0"
edition = "2021"

[lib]
name = "retroos_arch_interp"
path = "src/lib.rs"

[features]
# The execution engine is a compile-time choice; exactly one must be enabled
# (enforced by compile_error! guards in lib.rs). `kvm` builds are made with
# `--no-default-features --features kvm`.
default = ["tcg"]
tcg = ["dep:unicorn-engine"]
kvm = ["dep:kvm-ioctls", "dep:kvm-bindings"]

[dependencies]
arch-abi = { path = "../arch-abi" }
# The reusable software-VGA renderer (no_std, backend-agnostic). The interpreter
# emulates the VGA below the arch boundary and renders the guest screen through
# it — the same renderer a future in-RetroOS windowed-DOS compositor will use.
lib = { path = "../lib" }
# Unicorn (the software x86 core) drives the Vcpu run path on the `tcg` engine.
# The hosted build targets a native 64-bit host, so its C core builds natively.
unicorn-engine = { version = "2.1.5", optional = true }
# The `kvm` engine: safe wrappers + bindings for the /dev/kvm ioctl API
# (rust-vmm, the crates under Firecracker/crosvm). Linux-only by nature.
kvm-ioctls = { version = "0.24", optional = true }
kvm-bindings = { version = "0.14", optional = true }
# Software MMU: each guest address space is an mmap-reserved, demand-committed
# host VA region, so a guest-linear address is a contiguous host pointer (the
# same model the metal backend gets from real page tables).
libc = "0.2"
# crate_universe (Bazel) only generates @crates targets for dependencies in
# the DEFAULT cargo resolution; deps behind the non-default `kvm` feature are
# invisible to it. Listing the KVM crates as dev-deps keeps them in the
# resolved graph so @crates//:kvm-ioctls exists for :arch-interp-kvm.
[dev-dependencies]
kvm-ioctls = "0.24"
kvm-bindings = "0.14"

# The self-contained Unicorn proof-of-concept that seeded this backend:
#   cargo run -p retroos-arch-interp --example poc
[[example]]
name = "poc"
path = "examples/poc.rs"
required-features = ["tcg"]
