[package]
name = "arch-metal"
version = "0.1.0"
edition = "2024"

# Bare-metal i686 backend — built only by Bazel (//arch-metal) for the metal
# kernel, never on the host triple. It is kept OUT of the cargo workspace
# (see the root Cargo.toml `[workspace] exclude`) so `cargo build` (which targets
# the host) never tries to compile it; the kernel's `metal` feature names it as
# an optional path dep purely so the dependency graph resolves.

[lib]
name = "arch_metal"
path = "src/lib.rs"

[dependencies]
arch-abi = { path = "../arch-abi" }
lib = { path = "../lib" }
